Updated some last wording; Made data tab help text more consistent; Fixed bug with help text not showing when clicking subtabs; Fixed some style and spacing issues

--- a/app/assets/stylesheets/accessibility.sass
+++ b/app/assets/stylesheets/accessibility.sass
@@ -1688,14 +1688,13 @@ table.classifications
     tbody
       border: 0px
   .help_text
-    min-height: 3.5em
     h3
       margin-bottom: 0
     img
       padding-bottom: 1px
     .key
       text-align: center
-      width: 50%
+      width: 330px
       float: left
 
 // Helps position the (?) icon in various places. ...want to keep these together:
