--- a/app/assets/stylesheets/rtl/accessibility.sass
+++ b/app/assets/stylesheets/rtl/accessibility.sass
@@ -1734,7 +1734,6 @@ ul.tabs
     tbody
       border: 0px
   .help_text
-    min-height: 3.5em
     h3
       margin-bottom: 0
     img
