--- a/app/assets/stylesheets/rtl/application.sass
+++ b/app/assets/stylesheets/rtl/application.sass
@@ -3079,3 +3079,4 @@ div.definition
   background: $fieldset_light_blue
   li
     margin: 0px
+    padding: 15px
